--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lefthook": "^1.11.3",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
+    "vite-plugin-vue-devtools": "^7.7.2",
     "vue-tsc": "^2.2.4"
   }
 }
